# Google-ADK

./: .dockerignore  .env.example  .gcloudignore  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  sitecustomize.py  tailwind.config.js
.superdesign/init/: components.md  extractable-components.md  layouts.md  pages.md  routes.md  theme.md
app/: streamlit_app.py  template_helpers.py  web_app.py
app/assets/styles/: tailwind.css
app/demo_cases/jds/: ai_products_intern.md  backend_newgrad.md  data_analyst_rotational.md  ml_platform_engineer.md
app/demo_cases/resumes/: arjun_backend_student.txt  meera_data_analyst.txt
app/static/css/: app.css
app/templates/: base.html  compare.html  compare_results.html  diagnose.html  diagnose_progress.html  history.html  interview.html  landing.html  login.html  patch.html  plan.html  resume.html  settings.html
app/templates/partials/: footer.html  header.html  workflow_steps.html
infra/: Dockerfile  cloudrun.yaml
scripts/: live_stack_check.py  seed_demo_cases.py  smoke_test.py
src/job_rejection_agent/: __init__.py  config.py  google_models.py
tests/integration/: test_end_to_end.py  test_live_stack.py  test_prompt_optimizer_live.py
tests/unit/: test_ats_checker.py  test_auth_service.py  test_config.py  test_diagnostic_service.py  test_interview_simulator.py  test_job_requirements.py  test_persistence.py  test_phoenix_mcp.py  test_prompt_optimizer.py  test_resume_parser.py  test_root_agent.py  test_scoring_system.py  test_tracing.py  test_web_app.py
(+45 files in other folders)
